[package]
name = "commodore"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Slack Command API handler library"
documentation = "https://softprops.github.io/commodore"
homepage = "https://github.com/softprops/commodore"
repository = "https://github.com/softprops/commodore"
keywords = ["hyper", "slack", "webhook"]
license = "MIT"
build = "build.rs"

[dev-dependencies]
env_logger = "0.3"

[build-dependencies]
serde_codegen = "0.6.14"
syntex = "0.29"

[dependencies]
hyper = "0.7"
log = "0.3"
regex = "0.1"
serde = "0.6.6"
serde_json = "0.6.0"
url = "0.5"