[package]
name = "commodore"
version = "0.1.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Slack Command API handler library"
documentation = "https://softprops.github.io/commodore"
homepage = "https://github.com/softprops/commodore"
repository = "https://github.com/softprops/commodore"
keywords = ["hyper", "slack", "webhook"]
license = "MIT"
build = "build.rs"

[dev-dependencies]
env_logger = "0.3"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
hyper = "0.9"
log = "0.3"
regex = "0.1"
serde = "0.8"
serde_json = "0.8"
url = "1.2"
